@@ -1,3 +1,10 @@
+2007-02-20  Adam Roben  <aroben@apple.com>
+
+        Fix the build the right way.
+
+        * platform/StringTruncator.cpp:
+        (WebCore::truncateString): Keep all widths as floats.
+
 2007-02-20  Beth Dakin  <bdakin@apple.com>
 
         Reviewed by Maciej.
